# Memgram

./: .dockerignore  .env.example  .gitignore  BENCHMARKS.md  CONTRIBUTING.md  DESIGN.md  HANDOVER.md  LICENSE  README.md  consolidate.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feedback.md
.github/workflows/: ci.yml
bench/: bench.py  compare_mem0.py  load.py
bench/leaderboard/: README.md  adapters_ext.py  run_board.py
bench/locomo/: README.md  run_locomo.py
bench/quality/: adapters.py  dataset.json  results.json  run_eval.py
dashboard/: .env.local.example  README.md  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
docker/: Dockerfile  postgres-age.Dockerfile
examples/: demo_persistence.py  multi_agent.py  portable_memory.py  qa_rag_app.py
examples/agents/: memory_agents.py  simulated_life.py
launch/: medium_article.md
memgram/: __init__.py  llm.py  obs.py  presets.py  prompts.py  safety.py  settings_store.py  testing.py  usage.py
memgram/agents/: base.py  decay.py  extractor.py  monitors.py  procedural.py  proposer.py  reflection.py  summarizer.py
memgram/api/: main.py
memgram/memory/: embedder.py  migrate.py  (+2 more)
research/: 00_memgram_deep_dive.md  01_competitors_mem0_memgpt.md  02_gap_analysis_and_roadmap.md  03_context_engineering_landscape.md  README.md
tests/: test_gauntlet.py  test_logic.py  test_monitors.py  test_outbox.py  test_pipeline.py  test_properties.py  test_providers.py  test_safety.py  test_streaming.py  test_thin_slice.py  test_usage.py
(+33 files in other folders)
